section benefits - done

--- a/index.html
+++ b/index.html
@@ -70,20 +70,20 @@
 
         </section>
     </div>
-    <div class="benefist">
+    <section class="benefist">
         <div class="container__second">
             
             <div class="blocks">
 
                 <div class="block block__first">
                     <div class="side__left">
-                        <h2 class="block__first__heading">Be always first</h2>
-                        <p class="block__first__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                        <h2 class="block__heading">Be always first</h2>
+                        <p class="block__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                         <span class="block__first__underline"></span>
                     </div>
                     <div class="side__right">
                         <img src="assets/Macbook.png">
-                        <div class="block__first__background__figure"></div>
+                        <div class="blockfirst__backgroundfigure"></div>
                     </div>
                 </div>
 
@@ -93,16 +93,16 @@
                         <div class="block__second__background__figure"></div>
                     </div>
                     <div class="side__right">
-                        <h2 class="block__second__heading">Your shop is where you are!</h2>
-                        <p class="block__second__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                        <h2 class="block__heading">Your shop is where you are!</h2>
+                        <p class="block__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                         <span class="block__second__underline"></span>
                     </div>
                 </div>
 
                 <div class="block block__third">
                     <div class="side__left">
-                        <h2 class="block__third__heading">Increase recognition your brand!</h2>
-                        <p class="block__third__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                        <h2 class="block__heading">Increase recognition your brand!</h2>
+                        <p class="block__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                         <span class="block__third__underline"></span>
                     </div>
                     <div class="side__right">
@@ -114,6 +114,60 @@
             </div>
 
         </div>
+    </section>
+    <div class="container__third">
+        <section class="pricing">
+
+            <h2 class="pricing__heading">Pricing</h2>
+            <div class="carts">
+
+                <div class="cart cart__left">
+                    <h3 class="cart__heading">Basic</h3>
+                    <h4 class="cart__price">$0</h4>
+                    <h5 class="limited__offer">Limited offer</h5>
+                    <ul class="cart_list">
+                        <li class="list__element element__one">100 MB HDD</li>
+                        <li class="list__element element__two">1 Subdomain</li>
+                        <li class="list__element element__three">2 E-mails</li>
+                        <li class="list__element element__four">Two years license</li>
+                        <li class="list__element element__five">Full support</li>
+                    </ul>
+                    <a class="cart__button">Begin</a>
+                </div>
+
+
+                <div class="cart cart__middle">
+                    <h3 class="cart__heading">Professional</h3>
+                    <h4 class="cart__price">$25</h4>
+                    <h5 class="limited__offer">Limited offer</h5>
+                    <ul class="cart_list">
+                        <li class="list__element element__one">500 MB HDD</li>
+                        <li class="list__element element__two">2 Subdomains</li>
+                        <li class="list__element element__three">5 E-mails</li>
+                        <li class="list__element element__four">One year license</li>
+                        <li class="list__element element__five">Full support</li>
+                    </ul>
+                    <a class="cart__button">Begin</a>
+                </div>
+
+                <div class="cart cart__right">
+                    <h3 class="cart__heading">Premium</h3>
+                    <h4 class="cart__price">$60</h4>
+                    <h5 class="limited__offer">Limited offer</h5>
+                    <ul class="cart_list">
+                        <li class="list__element element__one">2 GB HDD</li>
+                        <li class="list__element element__two">5 Subdomains</li>
+                        <li class="list__element element__three">20 E-mails</li>
+                        <li class="list__element element__four">Two years license</li>
+                        <li class="list__element element__five">Full support</li>
+                    </ul>
+                    <a class="cart__button">Begin</a>
+                </div>
+
+            </div>
+
+
+        </section>
     </div>
 
 </main>
