--- a/index.html
+++ b/index.html
@@ -124,44 +124,44 @@
                 <div class="cart cart__left">
                     <h3 class="cart__heading">Basic</h3>
                     <h4 class="cart__price">$0</h4>
-                    <h5 class="limited__offer">Limited offer</h5>
+                    <p class="limited__offer">Limited offer</p>
                     <ul class="cart_list">
-                        <li class="list__element element__one">100 MB HDD</li>
-                        <li class="list__element element__two">1 Subdomain</li>
-                        <li class="list__element element__three">2 E-mails</li>
-                        <li class="list__element element__four">Two years license</li>
-                        <li class="list__element element__five">Full support</li>
+                        <li class="list__element check element__one">100 MB HDD</li>
+                        <li class="list__element check element__two">1 Subdomain</li>
+                        <li class="list__element check element__three">2 E-mails</li>
+                        <li class="list__element notincluded element__four">Two years license</li>
+                        <li class="list__element notincluded element__five">Full support</li>
                     </ul>
-                    <a class="cart__button">Begin</a>
+                    <a href="#" class="cart__button">Begin</a>
                 </div>
 
 
                 <div class="cart cart__middle">
                     <h3 class="cart__heading">Professional</h3>
                     <h4 class="cart__price">$25</h4>
-                    <h5 class="limited__offer">Limited offer</h5>
+                    <p class="limited__offer">Limited offer</p>
                     <ul class="cart_list">
-                        <li class="list__element element__one">500 MB HDD</li>
-                        <li class="list__element element__two">2 Subdomains</li>
-                        <li class="list__element element__three">5 E-mails</li>
-                        <li class="list__element element__four">One year license</li>
-                        <li class="list__element element__five">Full support</li>
+                        <li class="list__element check element__one">500 MB HDD</li>
+                        <li class="list__element check element__two">2 Subdomains</li>
+                        <li class="list__element check element__three">5 E-mails</li>
+                        <li class="list__element check element__four">One year license</li>
+                        <li class="list__element notincluded element__five">Full support</li>
                     </ul>
-                    <a class="cart__button">Begin</a>
+                    <a href="#" class="cart__button">Begin</a>
                 </div>
 
                 <div class="cart cart__right">
                     <h3 class="cart__heading">Premium</h3>
                     <h4 class="cart__price">$60</h4>
-                    <h5 class="limited__offer">Limited offer</h5>
+                    <p class="limited__offer">Limited offer</p>
                     <ul class="cart_list">
-                        <li class="list__element element__one">2 GB HDD</li>
-                        <li class="list__element element__two">5 Subdomains</li>
-                        <li class="list__element element__three">20 E-mails</li>
-                        <li class="list__element element__four">Two years license</li>
-                        <li class="list__element element__five">Full support</li>
+                        <li class="list__element check element__one">2 GB HDD</li>
+                        <li class="list__element check element__two">5 Subdomains</li>
+                        <li class="list__element check element__three">20 E-mails</li>
+                        <li class="list__element check element__four">Two years license</li>
+                        <li class="list__element check element__five">Full support</li>
                     </ul>
-                    <a class="cart__button">Begin</a>
+                    <a href="#" class="cart__button">Begin</a>
                 </div>
 
             </div>
